@@ -11,7 +11,6 @@ define('FORUM_DIR', ROOT_DIR . 'forums' . DIRECTORY_SEPARATOR);
 define('CHAT_DIR', ROOT_DIR . 'chat' . DIRECTORY_SEPARATOR);
 define('PM_DIR', ROOT_DIR . 'messages' . DIRECTORY_SEPARATOR);
 define('CACHE_DIR', ROOT_DIR . 'cache' . DIRECTORY_SEPARATOR);
-define('MODS_DIR', ROOT_DIR . 'mods' . DIRECTORY_SEPARATOR);
 define('LANG_DIR', ROOT_DIR . 'lang' . DIRECTORY_SEPARATOR);
 define('TEMPLATE_DIR', ROOT_DIR . 'templates' . DIRECTORY_SEPARATOR);
 define('BLOCK_DIR', ROOT_DIR . 'blocks' . DIRECTORY_SEPARATOR);
